Termino tests (#23)